# vn-news-summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c0b4207319da_init_schema.py
apps/web/: README.md
configs/: sources.yaml
configs/prompts/: summarize_v1.yaml
configs/training/: vit5_base_v1.yaml  vit5_base_v2.yaml
docs/: architecture.md  data_pipeline.md  deployment.md  labeling_v2_report.md  legal_notes.md  prompt_design.md  roadmap.md  training.md  training_v2_report.md
notebooks/: finetune_vit5_lora.ipynb
scripts/: run_crawler.py  run_eval.py  run_labeler.py  run_training.py
secrets/: README.md
tests/: conftest.py
tests/fixtures/: sample_article.html
tests/integration/: test_crawler_e2e.py  test_eval_e2e.py  test_labeler_e2e.py  test_run_training_cli.py
tests/unit/: test_api_health.py  test_baselines.py  test_config.py  test_dataset_loader.py  test_eval.py  test_extract.py  test_finetune_compute_metrics.py  test_finetune_config.py  test_finetune_loader.py  test_preprocess.py  test_prompt.py  test_qc.py  test_robots.py  test_smoke.py  test_text.py  test_time_utils.py  test_url_utils.py  test_vertex_client.py
